apps/data-product-portal/django/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app data-product-portal
spec:
  selector:
    matchLabels:
      app: *app
  template:
    metadata:
      labels:
        app: *app
    spec:
      volumes:
        - name: staticfiles
          persistentVolumeClaim:
            claimName: staticfiles-pvc
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: *app
          image: ghcr.io/timdatashift/data-product-portal:main
          imagePullPolicy: Always
          resources:
            requests:
              memory: 64Mi
              cpu: 10m
            limits:
              memory: 128Mi
              cpu: 500m
          ports:
            - containerPort: &port 8000
          livenessProbe:
            httpGet:
              path: /health
              port: *port
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /health
              port: *port
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - mountPath: "/app/static"
              name: staticfiles
