apps/data-product-portal/django/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app data-product-portal
spec:
  selector:
    app: *app
  ports:
    - name: http
      port: 80
      targetPort: 8000
